Fixed backdrop z-index

--- a/frontend/src/components/ModalAddTransaction/ModalAddTransaction.module.css
+++ b/frontend/src/components/ModalAddTransaction/ModalAddTransaction.module.css
@@ -146,7 +146,7 @@
     transition-duration: 250ms;
     pointer-events: all;
     transform: none;
-    z-index: 9999;
+    z-index: 10;
 }
 
 @media screen and (min-width: 768px) {
