--- a/frontend/src/components/ModalEditTransaction/ModalEditTransaction.module.css
+++ b/frontend/src/components/ModalEditTransaction/ModalEditTransaction.module.css
@@ -141,13 +141,13 @@
     height: 100%;
     opacity: 1;
     visibility: visible;
-    z-index: 9999;
     transform: scale(1);
     background-color: rgba(0, 0, 0, 0.25);
     transition-duration: 250ms;
     pointer-events: all;
     transform: none;
     overflow-y: scroll;
+    z-index: 10;
 }
 
 @media screen and (min-width: 768px) {
